--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -13,6 +13,10 @@ header{
     align-items: center;
     background-color: #ffffff;
     border-radius: 50px;
+    position: relative;
+    animation-name: slide;
+    animation-duration: 1.5s;  
+    animation-fill-mode: forwards;
 }
 
 .logo {
@@ -99,8 +103,12 @@ header{
     justify-content: space-between;
     gap: 100px;
     padding: 50px 40px 0;
-
+    position: relative;
+    animation-name: slide;
+    animation-duration: 1.5s;  
+    animation-fill-mode: forwards;
 }
+
 
 
 .hight-banner-elt1 {
@@ -116,7 +124,7 @@ header{
     img {
         width: 500px;
         position: relative;
-        margin-top: -470px;
+        margin-top: -500px;
     }
 }
 
@@ -142,6 +150,7 @@ header{
     position: relative;
     bottom: 170px;
     left: 450px;
+    cursor: pointer;
 }
 
 .tel-nbr, .horaire {
@@ -196,6 +205,11 @@ header{
     }
 }
 
+.service-card1:hover {
+    transform: scale(1.03);
+    transition: 0.3s;
+}
+
 .service-card1-textzone {
     background-color: #A3CEF1;
     width: 300px;
@@ -219,6 +233,11 @@ header{
         width: 90px;
         margin-bottom: -8px;
     }
+}
+
+.service-card2:hover {
+    transform: scale(1.03);
+    transition: 0.3s;
 }
 
 .service-card2-textzone {
@@ -245,6 +264,11 @@ header{
         width: 100px;
         margin-bottom: -8px;
     }
+}
+
+.service-card3:hover {
+    transform: scale(1.03);
+    transition: 0.3s;
 }
 
 .service-card3-textzone {
@@ -359,10 +383,10 @@ header{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    margin: 50px 150px;
+    margin: 50px 100px;
     justify-items: center;
     img {
-        width: 500px;
+        width: 100%;
     }
 }
 
@@ -374,7 +398,752 @@ header{
     border-radius: 0 100px  0 100px;
 }
 
+@media ( max-width: 1065px) {
+    .logo {
+        a {
+            img {
+            width: 130px;
+            }
+        }
+}
 
+.menu {
+    display: flex;
+    gap: 30px;
+        li {
+            list-style: none;
+            a {
+                text-decoration: none;
+                color: #000;
+                font-size: 1.1rem;
+            }
+        }
+}
+
+.button {
+    display: flex;
+    gap: 10px;
+    
+}
+
+.btn1 {
+    padding: 5px 10px;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.btn2 {
+    padding: 5px 10px;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.hight-banner-elts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    gap: 80px;
+    padding: 40px 30px 0;
+    position: relative;
+    animation-name: slide;
+    animation-duration: 1.5s;  
+    animation-fill-mode: forwards;
+}
+
+.hight-banner-elt1 {
+    h1 {
+        font-size: 3rem;
+    }
+}
+
+
+.hight-banner-elt2 { 
+    img {
+        position: relative;
+        margin-top: -460px;
+    }
+}
+
+.dr-bck {
+    position: relative;
+    top: 36px;
+}
+
+
+
+.service-card {
+    margin-right: 50px;
+}
+
+
+
+}
+
+@media ( max-width: 1000px) {
+
+.hight-banner-elt1 {
+h1 {
+    font-size: 3rem;
+}
+}
+
+.hight-banner-elt2 {
+    img {
+        position: relative;
+        margin-top: -465px;
+    }
+}
+
+
+.programme {
+    position: relative;
+    bottom: 170px;
+    left: 350px;
+}
+
+.dr-bck {
+    position: relative;
+    top: 35px;
+}
+
+.service-card1 {
+    width: 200px;
+    img {
+        width: 100px;
+    }
+}
+
+.service-card1-textzone {
+    width: 250px;   
+    h5 {
+        font-size: 30px;
+    }
+}
+
+
+.service-card2 {
+    width: 200px;
+    padding-top: 30px;
+    img {
+        width: 70px;
+        margin-bottom: -8px;
+    }
+}
+
+.service-card2-textzone {
+    width: 250px;
+    height: 150px;
+
+    h5 {
+        font-size: 30px;
+    }
+}
+
+.service-card3 {
+    width: 200px;
+    img {
+        width: 80px;
+        margin-bottom: -8px;
+    }
+}
+
+.service-card3-textzone {
+    width: 250px;
+    height: 150px;
+
+    h5 {
+        font-size: 30px;
+    }
+}
+
+.personel1 {
+    width: 300px;
+}
+
+.personel1-textzone {
+    padding: 20px;
+    text-align: center;
+    
+    h5 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        margin-top: 10px;
+        font-size: 1.1rem;
+    }
+
+}
+
+
+.personel2-textzone {
+    padding: 20px;
+    text-align: center;
+    
+    h5 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        margin-top: 10px;
+        font-size: 1.3rem;
+    }
+
+}
+
+.personel2 {
+    width: 300px;
+    height: 500px;
+
+    img {
+        width: 250px;
+    }
+}
+
+
+.personel3 {
+    width: 300px;
+    height: 500px;
+    img {
+        width: 550px;
+    }
+}
+
+
+
+
+}
+
+
+@media ( max-width: 980px) {
+header{
+    display: flex;
+    margin: 0 25px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.logo {
+        a {
+            img {
+            width: 100px;
+            }
+        }
+}
+
+
+.menu {
+    display: flex;
+    gap: 30px;
+        li {
+            list-style: none;
+            a {
+
+                font-size: 0.9rem;
+            }
+        }
+}
+
+
+.button {
+    display: flex;
+    gap: 14px;
+    
+}
+
+.btn1 {
+    padding: 4px 9px;
+    font-size: 0.8rem;
+}
+
+.btn2 {
+    padding: 4px 9px;
+    font-size: 0.8rem;
+}
+
+
+.hight-banner {
+    background: linear-gradient(270deg, rgba(111.63, 148.18, 124, 0.56) 0%, rgba(255, 255, 255, 0) 0%, rgba(15, 157, 232, 0.78) 42%, rgba(15, 157, 232, 0.86) 53%, rgba(15, 157, 232, 0.87) 59%, rgba(15, 157, 232, 0.90) 66%, rgba(15, 157, 232, 0.92) 69%, rgba(15, 157, 232, 0.93) 74%, rgba(15, 157, 232, 0.94) 78%, rgba(15, 157, 232, 0.95) 83%, rgba(15, 157, 232, 0.97) 86%, rgba(15, 157, 232, 0.99) 93%, #0F9DE8 100%); 
+    padding: 30px 30px 0 30px;
+    height: 580px;
+    
+}
+
+
+.hight-banner-elt1 {
+    h1 {
+        font-size: 2.5rem;
+    }
+}
+
+
+
+
+
+.hight-banner-elt2 {
+
+    
+    justify-items: center;
+    img {
+        width: 450px;
+        position: relative;
+        margin-top: -480px;
+    }
+}
+
+
+.personel1 {
+    width: 280px;
+    img {
+        width: 450px;
+    }
+}
+
+.personel1-textzone {
+    padding: 20px;
+    text-align: center;
+    
+    h5 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        margin-top: 10px;
+        font-size: 1.1rem;
+    }
+
+}
+
+
+.personel2-textzone {
+    padding: 20px;
+    text-align: center;
+    
+    h5 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        margin-top: 10px;
+        font-size: 1.3rem;
+    }
+
+}
+
+.personel2 {
+    width: 260px;
+    height: 460px;
+
+    img {
+        width: 230px;
+    }
+}
+
+
+.personel3 {
+    width: 260px;
+    height: 460px;
+    img {
+        width: 520px;
+    }
+}
+
+
+}
+
+@media ( max-width: 900px) {
+    .hight-banner-elt1 {
+h1 {
+    font-size: 2.5rem;
+}
+}
+
+.hight-banner-elt2 {
+    img {
+        position: relative;
+        margin-top: -465px;
+    }
+}
+
+
+.programme {
+    grid-template-columns: 1fr 1fr;
+    width: 450px;
+    height: 100px;
+    position: relative;
+    bottom: 170px;
+    left: 300px;
+}
+
+.tel-nbr, .horaire {
+    h5 {
+        font-size: 14px;
+        margin-bottom: 5px;
+
+    }
+}
+
+ 
+.dispo{
+    /* display: flex; */
+    gap: 10px;
+    img {
+        width: 25px;
+    }
+    p {
+        padding-right: 1px;
+    }
+}
+
+.nbr{
+    display: flex;
+    gap: 10px;
+    img {
+        width: 30px;
+    }
+}
+
+}
+
+@media ( max-width: 865px) {
+
+@keyframes slide {
+    from {top: -25px;}
+    to {top: 15px;}
+}
+
+header {
+    height: 55px;
+}
+
+
+.logo {
+        a {
+            img {
+            width: 140px;
+            }
+        }
+}
+
+.hight-banner-elt1 {
+h1 {
+    font-size: 2rem;
+    margin-top: 30px;
+}
+}
+
+.menu {
+    visibility: hidden;
+    display: none;
+}
+
+
+.menu-burger {
+    visibility: visible;
+    cursor: pointer;
+    i {
+        font-size: 1.9rem;
+    }
+
+}
+
+.button {
+    display: flex;
+    gap: 20px;
+    
+}
+
+.btn1 {
+    background: #0F9DE8;
+    padding: 7px 15px;
+    border-radius: 7px;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.btn1:hover {
+    background: #0f9ce8b6;
+    transition: 0.2s;
+}
+
+.btn2 {
+    background: #FF0000;
+    padding: 8px 15px;
+    border-radius: 7px;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+
+.btn2:hover {
+    background: #f11212;
+    transition: 0.2s;
+}
+
+
+.hight-banner {
+    background: linear-gradient(270deg, rgba(111.63, 148.18, 124, 0.56) 0%, rgba(255, 255, 255, 0) 0%, rgba(15, 157, 232, 0.78) 42%, rgba(15, 157, 232, 0.86) 53%, rgba(15, 157, 232, 0.87) 59%, rgba(15, 157, 232, 0.90) 66%, rgba(15, 157, 232, 0.92) 69%, rgba(15, 157, 232, 0.93) 74%, rgba(15, 157, 232, 0.94) 78%, rgba(15, 157, 232, 0.95) 83%, rgba(15, 157, 232, 0.97) 86%, rgba(15, 157, 232, 0.99) 93%, #0F9DE8 100%); 
+    padding: 30px 30px 0 30px;
+    height: 450px;
+    
+}
+
+.hight-banner-elts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    gap: 100px;
+    padding: 0 40px 0;
+    position: relative;
+    animation-name: slide;
+    animation-duration: 1.5s;  
+    animation-fill-mode: forwards;
+}
+
+
+
+.hight-banner-elt2 {
+
+    
+    justify-items: center;
+    img {
+        width: 300px;
+        position: relative;
+        left: 30px;
+        margin-top: -270px;
+    }
+}
+
+.dr-bck {
+    background-color: #fff;
+    width: 200px;
+    height: 300px;
+    border-radius: 120px 120px 0 0;
+    position: relative;
+    top: 32px;
+    left: 20px;
+}
+
+.programme {
+    background: #ffffffa9;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1px;
+    justify-items: center;
+    align-items: center;
+    width: 320px;
+    height: 80px;
+    border-radius: 15px;
+    position: relative;
+    bottom: 120px;
+    left: 230px;
+    cursor: pointer;
+}
+
+.tel-nbr, .horaire {
+    h5 {
+        font-size: 13px;
+        margin-bottom: 5px;
+
+    }
+}
+
+ 
+.dispo{
+    display: flex;
+    gap: 5px;
+    img {
+        width: 20px;
+    }
+    p {
+        font-size: 10px;
+        padding-right: 20px;
+    }
+}
+
+.nbr{
+    display: flex;
+    gap: 5px;
+    p {
+        font-size: 10px;
+    }
+    img {
+        width: 20px;
+    }
+}
+
+.section-title {
+    h2 {
+        font-size: 2rem;
+        font-weight: 900;
+        text-align: center;
+        margin-top: 60px;
+    }
+}
+
+.service-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+}
+
+.service-card1 {
+    img {
+        width: 70px;
+        margin-bottom: -5px;
+    }
+}
+
+
+
+.service-card1-textzone {
+    background-color: #A3CEF1;
+    width: 200px;
+    height: 120px;
+    border-radius: 0 0 40px 20px;
+    cursor: pointer;
+
+    h5 {
+        font-size: 25px;
+        font-weight: 900;
+        text-align: start;
+        padding: 25px;
+    }
+}
+
+
+.service-card2 {
+    padding-top: 20px;
+    img {
+        width: 55px;
+        margin-bottom: -8px;
+    }
+}
+
+
+.service-card2-textzone {
+    background-color: #50c878e1;
+    width: 200px;
+    height: 120px;
+    border-radius: 0 0 40px 20px;
+    cursor: pointer;
+
+    h5 {
+        font-size: 25px;
+        font-weight: 900;
+        text-align: start;
+        padding: 20px;
+    }
+}
+
+
+
+.service-card3 {
+    padding-top: 8px;
+    img {
+        width: 70px;
+        margin-bottom: -8px;
+    }
+}
+
+.service-card3:hover {
+    transform: scale(1.03);
+    transition: 0.3s;
+}
+
+.service-card3-textzone {
+    background-color: #ff793bd0;
+    width: 200px;
+    height: 120px;
+    border-radius: 0 0 40px 20px;
+    cursor: pointer;
+
+    h5 {
+        font-size: 25px;
+        font-weight: 900;
+        text-align: start;
+        padding: 25px;
+    }
+}
+
+
+.personnel-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+}
+
+.personel1 {
+    justify-items: center;
+    background:  linear-gradient(180deg, rgba(0, 64.98, 21.66, 0) 0%, rgba(15, 157, 232, 0.60) 100%);
+    width: 230px;
+    height: 530px;
+    border-radius: 40px;
+    padding-bottom: 20px;
+    cursor: pointer;
+
+    img {
+        width:380px;
+    }
+}
+
+
+.personel2-textzone {
+    padding: 20px;
+    text-align: center;
+    
+}
+
+.personel2 {
+    width: 220px;
+    height: 430px;
+
+    img {
+        width: 200px;
+    }
+}
+
+.personel1-textzone {
+    padding: 20px;
+    text-align: center;
+    
+    h5 {
+        font-size: 1.2rem;
+    }
+
+    p {
+        margin-top: 10px;
+        font-size: 1.1rem;
+    }
+
+}
+
+
+.personel3 {
+    width: 220px;
+    height: 430px;
+
+    img {
+        width: 450px;
+    }
+}
+
+
+.pict1, .pict4 {
+    border-radius: 80px 0 80px 0;
+}
+
+.pict2, .pict3 {
+    border-radius: 0 80px  0 80px;
+}
+
+}
 
 
 
