--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -290,6 +290,7 @@ header{
 .personnel-cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 0;
     justify-items: center;
 }
 
@@ -1508,6 +1509,9 @@ header {
 
 @media ( max-width: 414px) {
 
+
+
+
 header {
     height: 40px;
 }
@@ -1680,7 +1684,8 @@ header {
 
 .service-card {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+
 }
 
 .service-card1 {
@@ -1869,11 +1874,11 @@ header {
 
 
 .pict1, .pict4 {
-    border-radius: 50px 0 50px 0;
+    border-radius: 30px 0 30px 0;
 }
 
 .pict2, .pict3 {
-    border-radius: 0 50px  0 50px;
+    border-radius: 0 30px  0 30px;
 }
 
 .maps {
