reporation du responsive du button urgence dans le footer

--- a/css/contactstylesheet.css
+++ b/css/contactstylesheet.css
@@ -393,7 +393,8 @@ footer {
     }
     .urgence {
         width: 100%;
-        padding: 10px 0;
+        padding: 10px;
+        justify-content: center;
     }
     .numero-urgence img {
         width: 30px;
